--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,10 @@
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 			<version>3.1.2</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
